# IES_2425_113403

./: .gitignore  README.md  pom.xml
Lab01/: README.md
Lab01/AnyCityForecast/: Dockerfile  pom.xml
Lab01/IpmaApiClient/: pom.xml
Lab01/Log4Example/: log4j2.xml  pom.xml
Lab02/: README.md
Lab02/lab2_1/IESlab2/: pom.xml
Lab02/lab2_2/JarkartaWebStarter/: docker-compose.yml  pom.xml
Lab02/lab2_3/Spring-Empyrean/: pom.xml
Lab02/lab2_3/SpringBoot/: pom.xml
Lab03/: README.md
Lab03/Ex3_1/DataBase/: pom.xml
Lab03/Ex3_2/Employee/: pom.xml
Lab04/: README.md
Lab04/Ex4_1/MyApp/: package-lock.json
Lab04/Ex4_1/MyApp/src/: main.jsx
Lab04/Ex4_2/: package-lock.json
Lab04/Ex4_2/App/: package-lock.json
Lab04/Ex4_2/App/src/: App.css  App.jsx  b.jsx  c.jsx  galo.css  galo.jsx  main.jsx
Lab04/Ex4_3/FetchAPI/: package-lock.json  package.json
Lab04/Ex4_3/FetchAPI/src/: App.css  Axios.jsx  GetAndDelete.jsx  Post.jsx  main.jsx
Lab04/Ex4_4/: package-lock.json
Lab04/Ex4_4/Movies/: pom.xml
Lab04/Ex4_4/ReactInterface/: package-lock.json  package.json
Lab04/Ex4_4/ReactInterface/src/: App.jsx  Quotes.jsx
Lab05/: README.md
Lab05/5.2/poetry-demo/poetry_demo/: consumer_example.py  producer_example.py
Lab05/5.3/KafkaDemo/: pom.xml
Lab05/5.4/: docker-compose.yml
Lab05/5.4/Movies/: .gitattributes  dockerfile  pom.xml
Lab05/5.4/ReactInterface/: dockerfile
Lab05/5.4/ReactInterface/src/: App.jsx  main.jsx
Lab05/5.4/poetry-demo/: dockerfile  pyproject.toml  requirements.txt
Lab05/5.4/poetry-demo/poetry_demo/: producer_example.py
(+77 files in other folders)
