[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["TKahk <pedro.salgado@ua.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^3.0.0"
kafka = "^1.3.5"
kafka-python = "^2.0.2"
six = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
